# char-classify

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  chars.hh
examples/: demo.cc
test/: test.cc
